roles for endpoints fixed